--- a/BorrowingBooks/package.json
+++ b/BorrowingBooks/package.json
@@ -12,7 +12,8 @@
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.9.0",
     "element-plus": "^2.9.10",
-    "pinia": "^3.0.1",
+    "pinia": "^3.0.2",
+    "pinia-plugin-persistedstate": "^4.3.0",
     "three": "^0.176.0",
     "vanta": "^0.5.24",
     "vue": "^3.5.13",
