--- a/SpringBoot/BorrowingBooks/pom.xml
+++ b/SpringBoot/BorrowingBooks/pom.xml
@@ -149,6 +149,12 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.3</version>
         </dependency>
+<!--        定时起依赖-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
